--- a/pom.xml
+++ b/pom.xml
@@ -67,8 +67,7 @@
             <groupId>com.squareup.retrofit2</groupId>
             <artifactId>retrofit</artifactId>
             <version>2.9.0</version>
-        </dependency>
-        <dependency>
+        </dependency>        <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>logging-interceptor</artifactId>
             <version>3.9.0</version>
@@ -83,6 +82,16 @@
             <artifactId>hamcrest</artifactId>
             <version>2.2</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.5.11</version>
         </dependency>
     </dependencies>
 
@@ -118,6 +127,7 @@
             </resource>
         </resources>
     </build>
+
 
 
 </project>
